# WaterCard

./: README.md  pyproject.toml  requirements.txt
WaterCard/: __init__.py  __main__.py  generate.py
WaterCard/static/: WaterCard.css  WaterCard.html
