[project]
name = "WaterCard"
version = "1.1.2"
description = "WaterCard maker for https://wir-kaufen-dein-arschwasser.de"
authors = [
    { name = "AlbertUnruh", email = "AlbertUnruh@pm.me" }
]
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
homepage = "https://wir-kaufen-dein-arschwasser.de"
sourcecode = "https://github.com/AlbertUnruh/WaterCard"
issues = "https://github.com/AlbertUnruh/WaterCard/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
weasyprint = "^66.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"  # major and minor aren't semantically versioned but on year and month
pre-commit = "^4.2.0"

[tool.black]
line-length = 120
target-version = ["py312"]
include = "\\.pyi?$"

[tool.isort]
line_length = 120
py_version = 312
profile = "black"
lines_after_imports = 2
lines_between_sections = 1
split_on_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "standard library"
import_heading_thirdparty = "third party"
import_heading_firstparty = "first party"
import_heading_localfolder = "local"

[tool.ruff]
line-length = 120
target-version = "py312"
output-format = "concise" # set to full if you want to see the source of the error/warning

[tool.ruff.lint]
task-tags = ["TODO", "FIXME", "NOTE"]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle
    "C90",  # mccabe
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyudpgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TC",   # flake8-type-checking
    "INT",  # flake8-gettext
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # Perflint
    "FURB", # refurb
    "RUF",  # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "G002",   # Logging statement uses `%`
    "G004",   # Logging statement uses f-string
]
per-file-ignores = {"tests/*.py" = ["D1", "S101", "FBT001", "SLF001"], "update_version.py" = ["T201"], "WaterCard/__init__.py" = ["N999"]}

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.flake8-errmsg]
max-string-length = 20

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.lint.pydocstyle]
convention = "numpy"
